# uwoc_sigGen

./: CMakeLists.txt  README.md  buffer.cpp  buffer.h  generator.cpp  generator.h  generator_thread.cpp  generator_thread.h  main.cpp  reader.cpp  reader.h  reader_thread.cpp  reader_thread.h
